fix unreadable filenames in input boxes thanks to WebKit being "overly creative" with widget styling
--HG--
branch : moe
extra : convert_revision : svn%3A2d28d66d-8d94-df11-8c86-00306ef368cb/trunk/moe%40937

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -204,7 +204,12 @@ input {
   padding: 0 0.3em;
 }
 
-input[type=file] {
+/* Unlike just about every other browser, WebKit puts the filename of file input elements
+ * on the page background, instead of on a white box.  We need to set it to a light color
+ * to make it visible, and we need to do this only on WebKit--if we set other browsers to
+ * white, it'll be unreadable on the white background. */
+HTML.webkit input[type=file] {
+  color: #FFF;
 }
 
 input[type=password]:focus {
